fix parkinfo basemap inits; geolocation

--- a/dev/index.html
+++ b/dev/index.html
@@ -40,6 +40,7 @@
 <script type="text/javascript" src="js/OpenLayers-2.12/OpenLayers.js"></script>
 <script src="js/BASEMAPS.js"></script>
 <script src="js/index.js"></script>
+<script src="js/geolocation.js"></script>
 
 <script>
 
